llvm-gcc-4.2-2.9/gcc/testsuite/obj-c++.dg/storage-class-neg-1.mm
/* APPLE LOCAL file radar 4360010 */
/* Check that illegal usage of storage class 'static' does not ICE. */
/* { dg-do compile { target *-*-darwin* } } */

@interface Foo {
	static  int iFoo; /* { dg-error "storage class specified" } */
}
@end
